# audiostreamer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
lib/: audiostreamer.dart  audiostreamer_method_channel.dart  main.dart  mediaplayer.dart  mediaplayer_channel.dart  mediarecorder.dart  mediarecorder_channel.dart
test/: proxy.py  settings.py  utils.py  widget_test.dart
test/Microphone_Proxy_SpeakerServer/: client.py  server.py
test/Speaker_Proxy_MicrophoneServer/: client.py  server.py
windows/: CMakeLists.txt
windows/include/audiostreamer/: audio_streamer_plugin.cpp  audio_streamer_plugin.h  utils.h
windows/include/audiostreamer/playback/: mediaplayer.cpp  mediaplayer.h  player.cpp  player.h
windows/include/audiostreamer/recording/: audiostreamer.cpp  audiostreamer.h  mediarecorder.cpp  mediarecorder.h  recorder.cpp  recorder.h
windows/include/socket_audiostream/: socket_audiostream_plugin.cpp  socket_audiostream_plugin.h  utils.h
windows/include/socket_audiostream/playback/: denoise_lite.cpp  denoise_lite.h  mediaplayer.cpp  mediaplayer.h  player.cpp  player.h
windows/include/socket_audiostream/recording/: mediarecorder.cpp  mediarecorder.h  recorder.cpp  recorder.h
windows/runner/: CMakeLists.txt  flutter_window.cpp
